[gd_scene load_steps=46 format=2]

[ext_resource path="res://Menu/maintheme.tres" type="Theme" id=1]
[ext_resource path="res://Games/signup.gd" type="Script" id=2]
[ext_resource path="res://Menu/main.png" type="Texture" id=3]
[ext_resource path="res://Menu/Fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu/eyeidle.png" type="Texture" id=5]
[ext_resource path="res://Menu/eyepressed.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 67, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 134, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 201, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 268, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 335, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 402, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 469, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 536, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 603, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 670, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 737, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 804, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 871, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 938, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1005, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1072, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1139, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1206, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1273, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1340, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1407, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1474, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1541, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1608, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 67, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 134, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 134, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 67, 0, 67, 70 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 67, 70 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "press",
"speed": 15.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "unpress",
"speed": 15.0
} ]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=40]

[sub_resource type="StyleBoxEmpty" id=41]

[sub_resource type="StyleBoxEmpty" id=42]

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="Theme" id=39]
Button/styles/disabled = SubResource( 40 )
Button/styles/focus = SubResource( 41 )
Button/styles/hover = SubResource( 42 )
Button/styles/normal = SubResource( 43 )
Button/styles/pressed = SubResource( 44 )

[node name="SignUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
username = NodePath("CenterContainer/VBoxContainer/username/username")
password = NodePath("CenterContainer/VBoxContainer/password/password")
username_error = NodePath("CenterContainer/VBoxContainer/username/usernameerror")
password_error = NodePath("CenterContainer/VBoxContainer/password/passworderror")

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 488.0
margin_top = 161.0
margin_right = 791.0
margin_bottom = 559.0
custom_constants/separation = 32

[node name="signuplabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 33.0
text = "SIGN UP"
align = 1

[node name="username" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 303.0
margin_bottom = 167.0

[node name="usernamelabel" type="Label" parent="CenterContainer/VBoxContainer/username"]
margin_right = 303.0
margin_bottom = 33.0
text = "Username"

[node name="username" type="LineEdit" parent="CenterContainer/VBoxContainer/username"]
margin_top = 37.0
margin_right = 303.0
margin_bottom = 102.0
rect_min_size = Vector2( 140, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameerror" type="Control" parent="CenterContainer/VBoxContainer/username"]
visible = false
margin_top = 106.0
margin_right = 303.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/username/usernameerror"]
modulate = Color( 1, 0.282353, 0.282353, 1 )
margin_left = -545.0
margin_right = 854.0
margin_bottom = 33.0
text = "username nesto"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 303.0
margin_bottom = 301.0

[node name="passwordlabel" type="Label" parent="CenterContainer/VBoxContainer/password"]
margin_right = 303.0
margin_bottom = 33.0
text = "Password"

[node name="password" type="LineEdit" parent="CenterContainer/VBoxContainer/password"]
margin_top = 37.0
margin_right = 303.0
margin_bottom = 102.0
rect_min_size = Vector2( 303, 0 )
secret = true
caret_blink = true
caret_blink_speed = 0.45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CenterContainer/VBoxContainer/password/password"]
position = Vector2( 332, 17 )
frames = SubResource( 33 )
animation = "unpress"
frame = 2
playing = true

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/password/password"]
margin_left = 300.0
margin_top = -3.0
margin_right = 360.0
margin_bottom = 62.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passworderror" type="Control" parent="CenterContainer/VBoxContainer/password"]
visible = false
margin_top = 106.0
margin_right = 303.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/password/passworderror"]
modulate = Color( 1, 0.282353, 0.282353, 1 )
margin_left = -545.0
margin_right = 862.0
margin_bottom = 33.0
text = "password greska 123123123123"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="signup" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 333.0
margin_right = 303.0
margin_bottom = 398.0
text = "Sign Up"

[node name="Label" type="Label" parent="."]
margin_left = 95.0
margin_top = 41.0
margin_right = 557.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "https://www.site#8552.com/sign_up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
margin_left = 5.0
margin_top = 1.0
margin_right = 35.0
margin_bottom = 34.0
theme = SubResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 44.0
margin_right = 74.0
margin_bottom = 33.0
theme = SubResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="CenterContainer/VBoxContainer/password/password/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/password/password/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/signup" to="." method="attempt_signup"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
